# prefeitura-rio

./: .flake8  .gitignore  .mergify.yml  .pre-commit-config.yaml  README.md  core.html  flake.nix  index.html  pyproject.toml  pytest.ini  setup.py  utils.html
.github/workflows/: docs.yaml  lint.yaml  manual-publish.yaml  publish.yaml  tests.yaml
integrations/: index.html
integrations/sgrc/: exceptions.html  index.html  models.html  utils.html
metrics/: agnostic.html  index.html  tensorflow.html
pipelines_utils/: bd.html  dbt.html  env.html  gcs.html  index.html  infisical.html  io.html  logging.html  prefect.html  state_handlers.html
prefeitura_rio/: __init__.py  core.py  utils.py  utils.sql
prefeitura_rio/actions/: fetch_metadata.py  metadata_to_dbt_schema.py
prefeitura_rio/integrations/sgrc/: __init__.py  exceptions.py  models.py  utils.py
prefeitura_rio/metrics/: __init__.py  agnostic.py
prefeitura_rio/pipelines_templates/: __init__.py  dump_datario.py  dump_db.py  dump_mongo.py  dump_to_gcs.py  geolocate.py
prefeitura_rio/pipelines_templates/dump_datario/: flows.py  tasks.py
prefeitura_rio/pipelines_templates/dump_db/: flows.py  tasks.py
prefeitura_rio/pipelines_templates/dump_earth_engine/: flows.py  tasks.py
prefeitura_rio/pipelines_templates/dump_erath_engine/: flows.py  tasks.py
prefeitura_rio/pipelines_templates/dump_mongo/: flows.py  tasks.py
prefeitura_rio/pipelines_templates/dump_to_gcs/: flows.py
prefeitura_rio/pipelines_templates/dump_url/: flows.py  tasks.py
prefeitura_rio/pipelines_templates/geolocate/: flows.py  tasks.py
prefeitura_rio/pipelines_templates/policy_matrix/: flows.py  tasks.py
prefeitura_rio/pipelines_templates/run_dbt_model/: flows.py  tasks.py
prefeitura_rio/pipelines_utils/: bd.py  constants.py  credentials.py  custom.py  database_mongo.py  database_sql.py  dataplex.py  dataplex_tasks.py  dbt.py  env.py  gcs.py  geo.py  infisical.py  io.py  logging.py  metadata.py  pandas.py  prefect.py  redis_pal.py  sheets.py  state_handlers.py  tasks.py  time.py
scripts/: docs.py  lint.py
tests/: test_metrics.py
